Prevent selection of "Jump to" text
When an article's heading and body text are copied together, prevent the
"Jump to" links from being copied.

Bug: 59235

--- a/skins/common/shared.css
+++ b/skins/common/shared.css
@@ -1183,7 +1183,8 @@ table.floatleft {
 }
 
 .mw-editsection,
-.toctoggle {
+.toctoggle,
+#jump-to-nav {
 	-moz-user-select: none;
 	-webkit-user-select: none;
 	-ms-user-select: none;
